--- a/index.html
+++ b/index.html
@@ -7,6 +7,62 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+          <img src="img/logo-rotana.svg" alt="Logo">  
+        </div>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Contanto</li>
+                <li>Galeria</li>
+            </ul>
+        </nav>
+        <div>
+            <button>login</button>
+            <!--agregar login-->
+            <button>buscar </button>
+        </div>
+    </header>
+
+    <section>
+        
+        <div>estrellas y calificaciones</div>
+
+        <div>
+            <img src="" alt="imagen principal">
+            <ul>
+                <li><img> </li>
+                <li><img> </li>
+                <li><img> </li>
+                <li><img> </li>
+            </ul>
+            <div>
+                <p>descripcion</p>
+                <button>reservar</button>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <ul>
+            <li>fotos</li>
+            <li>reviews</li>
+            <li>ubicacion</li>
+            <li>caracteristicas</li>
+        </ul>
+
+        <p>precio</p>
+
+        <div>
+            <ul>
+                <li>facebook</li>
+                <li>instagram</li>
+                <li>twitter</li>
+            </ul>            
+        </div>
+
+        <button>compartir</button>
+    </footer>
 </body>
 </html>
