--- a/index.html
+++ b/index.html
@@ -1,68 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hotel Rose Ryhaan by Rotana</title>
+  </head>
+  <body>
+    <h1>Hotel Rose Ryhann by Rotana</h1>
     <header>
-        <div>
-          <img src="img/logo-rotana.svg" alt="Logo">  
-        </div>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Contanto</li>
-                <li>Galeria</li>
-            </ul>
-        </nav>
-        <div>
-            <button>login</button>
-            <!--agregar login-->
-            <button>buscar </button>
-        </div>
+      <div>
+        <img src="img/logo-rotana.svg" alt="Logo-Ryhaan" width="75" />
+      </div>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Reviews</li>
+          <li>Galería</li>
+          <li>
+            <img src="img/img-users/user.svg" alt="Foto Usuario" width="60" />
+          </li>
+        </ul>
+      </nav>
+      <div>
+        <button>
+          <img src="img/svg/login.svg" alt="icono logout" width="30" />login
+        </button>
+        <!--agregar login-->
+        <button>buscar</button>
+      </div>
     </header>
 
     <section>
-        
-        <div>estrellas y calificaciones</div>
+      <div>estrellas y calificaciones</div>
 
+      <div>
+        <img
+          src="img/img-habitacion/230031199.jpg"
+          alt="imagen torre del hotel"
+          height="350"
+        />
+        <ul>
+          <li>
+            <img
+              src="img/img-habitacion/233120309.jpg"
+              alt="imagen mujer cómoda en habitación"
+              height="150"
+            />
+          </li>
+          <li>
+            <img
+              src="img/img-habitacion/230220017.jpg"
+              alt="imagen cocina y lavadora habitación"
+              height="150"
+            />
+          </li>
+          <li>
+            <img
+              src="img/img-habitacion/230049217.jpg"
+              alt="imagen cocina habitación 2"
+              height="150"
+            />
+          </li>
+          <li>
+            <img
+              src="img/img-habitacion/230031947.jpg"
+              alt="imagen piscina"
+              height="150"
+            />
+          </li>
+          <li>
+            <img
+              src="img/img-habitacion/230203324.jpg"
+              alt="imagen restaurante hotel"
+              height="150"
+            />
+          </li>
+          <li>
+            <img
+              src="img/img-habitacion/230203934.jpg"
+              alt="imagen cama habitación"
+              height="150"
+            />
+          </li>
+        </ul>
         <div>
-            <img src="" alt="imagen principal">
-            <ul>
-                <li><img> </li>
-                <li><img> </li>
-                <li><img> </li>
-                <li><img> </li>
-            </ul>
-            <div>
-                <p>descripcion</p>
-                <button>reservar</button>
-            </div>
+          <p>descripción</p>
+          <button>reservar</button>
         </div>
+      </div>
     </section>
 
     <footer>
+      <ul>
+        <li>fotos</li>
+        <li>reviews</li>
+        <li>ubicacion</li>
+        <li>caracteristicas</li>
+        <li>contáctanos</li>
+      </ul>
+
+      <p>precio</p>
+
+      <div>
         <ul>
-            <li>fotos</li>
-            <li>reviews</li>
-            <li>ubicacion</li>
-            <li>caracteristicas</li>
+          <li>facebook</li>
+          <li>instagram</li>
+          <li>twitter</li>
         </ul>
+      </div>
 
-        <p>precio</p>
-
-        <div>
-            <ul>
-                <li>facebook</li>
-                <li>instagram</li>
-                <li>twitter</li>
-            </ul>            
-        </div>
-
-        <button>compartir</button>
+      <button>compartir</button>
     </footer>
-</body>
+  </body>
 </html>
