commit on 'main'

--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
       </div>
       <nav>
         <ul>
-          <li>Home</li>
-          <li>Reviews</li>
-          <li>Galería</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="reviews.html">Reviews</a></li>
+          <li><a href="galeria.html">Galería</a></li>
+          <li><a href="reservas.html">Reservas</a></li>
           <li>
-            <img src="img/img-users/user.svg" alt="Foto Usuario" width="60" />
+            <a href="#"
+              ><img
+                src="img/img-users/user.svg"
+                alt="Foto Usuario"
+                width="60"
+              />
+            </a>
           </li>
         </ul>
       </nav>
@@ -98,6 +105,7 @@
         <li>ubicacion</li>
         <li>caracteristicas</li>
         <li>contáctanos</li>
+        <li><a href="https://rotana.com">by Rotana</a></li>
       </ul>
 
       <p>precio</p>
