--- a/contacto.html
+++ b/contacto.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Galería</title>
+    <title>Contacto</title>
   </head>
   <body>
-    <h2>Galería</h2>
+    <h2>Contacto</h2>
     <a href="index.html">Home</a>
   </body>
 </html>
