--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <span class="dot" onclick="currentSlide(2)"></span>
           <span class="dot" onclick="currentSlide(3)"></span>
         </div>
-        <article>
+        <article class="information">
           <h2>Descripción</h2>
           <p>
             El Rose Rayhaan by Rotana está situado en la carretera Sheikh Zayed,
