--- a/index.html
+++ b/index.html
@@ -5,35 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+    /> -->
+    <!-- FONTAWESOME OK -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
+
     <title>Hotel Rose Ryhaan by Rotana</title>
   </head>
 
   <body>
-    <header>
-      <div class="logo-top">
-        <a href="index.html">
-          <img
-            src="img/svg/logo-ryhaan_dubai.svg"
-            alt="Rose Ryhaan Dubai"
-            height="35"
-          />
-        </a>
-      </div>
-      <!-- search bar right align -->
-      <div class="search">
-        <form action="#">
-          <input type="text" placeholder="Buscar" name="search" />
-          <button>Búsqueda</button>
-        </form>
-      </div>
-      <!--agregar login-->
-    </header>
-    <!-- SIDEBAR -->
     <nav>
+      <!-- SIDEBAR -->
       <div id="mySidebar" class="sidebar">
         <div class="logo-img">
           <a href="index.html">
@@ -50,35 +40,44 @@
           <a href="contacto.html">Contacto</a>
           <a href="nosotros.html">Sobre Nosotros</a>
           <a href="#">
-            <img src="img/img-users/user.svg" alt="Foto Usuario" width="60" />
+            <img
+              src="img/img-users/user.svg"
+              alt="Foto Usuario"
+              width="60"
+              onclick="document.getElementById('modal-id01').style.display='block'"
+            />
           </a>
-          <button>
-            <img src="img/svg/login.svg" alt="icono logout" width="30" />login
-          </button>
+
+          <!-- BOTON MODAL LOGIN BOX -->
+          <div>
+            <button
+              class="modal-login"
+              onclick="document.getElementById('modal-id01').style.display='block'"
+            >
+              <i class="fa-solid fa-arrow-right-to-bracket"></i>
+              Iniciar Sesión
+            </button>
+          </div>
         </div>
 
-        <h2>Iniciar Sesión</h2>
-        <!--Step 1 : Adding HTML-->
-        <button
-          onclick="document.getElementById('id01').style.display='block'"
-          style="width: auto"
-        >
-          Login
-        </button>
-
-        <div id="id01" class="modal">
+        <!-- MODAL LOGIN BOX -->
+        <div id="modal-id01" class="modal">
           <form class="modal-content animate" action="/action_page.php">
-            <div class="imgcontainer">
+            <div class="modal-imgcontainer">
               <span
-                onclick="document.getElementById('id01').style.display='none'"
-                class="close"
+                onclick="document.getElementById('modal-id01').style.display='none'"
+                class="modal-close"
                 title="Close Modal"
                 >&times;</span
               >
-              <img src="img/img-users/user.svg" alt="Avatar" class="avatar" />
+              <img
+                src="img/img-users/user.svg"
+                alt="Avatar"
+                class="modal-avatar"
+              />
             </div>
 
-            <div class="container">
+            <div class="modal-container">
               <label><b>Usuario</b></label>
               <input
                 type="text"
@@ -102,15 +101,16 @@
               <input type="checkbox" checked="checked" /> Recordarme
             </div>
 
-            <div class="container" style="background-color: #282a36">
+            <div class="modal-container" style="background-color: #282a36">
               <button
                 type="button"
-                onclick="document.getElementById('id01').style.display='none'"
-                class="cancelbtn"
+                onclick="document.getElementById('modal-id01').style.display='none'"
+                class="modal-cancelbtn"
               >
                 Cancelar
               </button>
-              <span class="psw"
+              <br />
+              <span class="modal-psw"
                 >Ha olvidado su <a href="#">Contraseña</a>?</span
               >
             </div>
@@ -118,13 +118,38 @@
         </div>
       </div>
     </nav>
-    <button class="openbtn" onclick="openNav()">☰</button>
-    <!-- SECCION PRINCIPAL -->
-    <div class="base-main">
-      <!-- AREA PRINCIPAL -->
-      <section class="imgs">
-        <!-- SLIDESHOW -->
-        <!-- <div class="slideshow-container">
+    <div id="main">
+      <header>
+        <!-- FIXME incluir boton de open del sidebar dentro, y aumentar el width para que se vean solamente los iconos del sidebar -->
+        <!-- SIDEBAR - BOTON OPEN -->
+        <div>
+          <button class="openbtn" onclick="openNav()">☰</button>
+        </div>
+        <div class="logo-top">
+          <a href="index.html">
+            <img
+              src="img/svg/logo-ryhaan_dubai.svg"
+              alt="Rose Ryhaan Dubai"
+              height="35"
+            />
+          </a>
+        </div>
+        <!-- search bar right align -->
+        <div class="search">
+          <form action="#">
+            <input type="text" placeholder="Buscar" name="search" />
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+          </form>
+        </div>
+        <!--agregar login-->
+      </header>
+
+      <!-- SECCION PRINCIPAL -->
+      <div class="base-main">
+        <!-- AREA PRINCIPAL -->
+        <section class="imgs">
+          <!-- SLIDESHOW -->
+          <!-- <div class="slideshow-container">
           Full-width images with number and caption text 
           <div class="slideGaleria fade">
             <div class="numbertext">1 / 7</div>
@@ -205,172 +230,175 @@
           <span class="dot" onclick="currentSlide(3)"></span>
         </div>-->
 
-        <div class="galeria">
-          <input type="radio" name="navegacion" id="_1" checked />
-          <input type="radio" name="navegacion" id="_2" />
-          <input type="radio" name="navegacion" id="_3" />
-          <input type="radio" name="navegacion" id="_4" />
-          <input type="radio" name="navegacion" id="_5" />
-          <input type="radio" name="navegacion" id="_6" />
-          <input type="radio" name="navegacion" id="_7" />
+          <div class="galeria">
+            <input type="radio" name="navegacion" id="_1" checked />
+            <input type="radio" name="navegacion" id="_2" />
+            <input type="radio" name="navegacion" id="_3" />
+            <input type="radio" name="navegacion" id="_4" />
+            <input type="radio" name="navegacion" id="_5" />
+            <input type="radio" name="navegacion" id="_6" />
+            <input type="radio" name="navegacion" id="_7" />
 
-          <img
-            src="img/img-habitacion/230031199.jpg"
-            width="500"
-            height="300"
-            alt="Galeria CSS 1"
-          />
-          <img
-            src="img/img-habitacion/230031947.jpg"
-            width="500"
-            height="300"
-            alt="Galeria CSS 2"
-          />
-          <img
-            src="img/img-habitacion/233120309.jpg"
-            width="500"
-            height="300"
-            alt="Galeria CSS 3"
-          />
-          <img
-            src="img/img-habitacion/230032549.jpg"
-            width="500"
-            height="300"
-            alt="Galeria CSS 4"
-          />
-          <img
-            src="img/img-habitacion/230049217.jpg"
-            width="500"
-            height="300"
-            alt="Galeria CSS 5"
-          />
-          <img
-            src="img/img-habitacion/230203324.jpg"
-            width="500"
-            height="300"
-            alt="Galeria CSS 6"
-          />
-          <img
-            src="img/img-habitacion/230203934.jpg"
-            width="260"
-            height="300"
-            alt="Galeria CSS 7"
-          />
-        </div>
+            <img
+              src="img/img-habitacion/230031199.jpg"
+              width="500"
+              height="300"
+              alt="Galeria CSS 1"
+            />
+            <img
+              src="img/img-habitacion/230031947.jpg"
+              width="500"
+              height="300"
+              alt="Galeria CSS 2"
+            />
+            <img
+              src="img/img-habitacion/233120309.jpg"
+              width="500"
+              height="300"
+              alt="Galeria CSS 3"
+            />
+            <img
+              src="img/img-habitacion/230032549.jpg"
+              width="500"
+              height="300"
+              alt="Galeria CSS 4"
+            />
+            <img
+              src="img/img-habitacion/230049217.jpg"
+              width="500"
+              height="300"
+              alt="Galeria CSS 5"
+            />
+            <img
+              src="img/img-habitacion/230203324.jpg"
+              width="500"
+              height="300"
+              alt="Galeria CSS 6"
+            />
+            <img
+              src="img/img-habitacion/230203934.jpg"
+              width="260"
+              height="300"
+              alt="Galeria CSS 7"
+            />
+          </div>
 
-        <!-- Next and previous buttons -->
+          <!-- Next and previous buttons -->
 
-        <div class="information">
-          <h2>Descripción</h2>
-          <p>
-            El Rose Rayhaan by Rotana está situado en la carretera Sheikh Zayed,
-            a 3 minutos del Centro Financiero Internacional de Dubái (DIFC) y a
-            un paso de la estación de metro Financial Centre. También se
-            proporciona recepción 24 horas, servicio de habitaciones y WiFi
-            gratuita en todo el establecimiento, entre otras comodidades. El
-            establecimiento alberga piscina al aire libre, centro de fitness,
-            hammam y restaurante.
-          </p>
-          <p>
-            El hotel ofrece 462 habitaciones y suites con vistas panorámicas a
-            Dubái y al Burj Khalifa. Los alojamientos disponen de hervidor de
-            agua. Todas las habitaciones del Rose Rayhaan Rotana Dubai están
-            equipadas con baño privado con bañera.
-          </p>
-          <p>
-            El Rose Rayhaan by Rotana alberga 3 sitios para comer, entre ellos
-            el restaurante Petals. Tiene capacidad para 160 personas y ofrece
-            comida durante todo el día para el desayuno, el almuerzo y la cena.
-          </p>
-          <p>
-            La zona de conferencias, ubicada en 2 plantas, cuenta con 7 salas de
-            reuniones, todas equipadas con las últimas instalaciones
-            audiovisuales, conexiones sin cable y opciones. La zona de ocio del
-            hotel, el Bodylines Fitness and Wellness Club, ofrece un gimnasio
-            totalmente equipado, piscina exterior climatizada para adultos y
-            niños en la azotea, salón de belleza, salas de tratamiento para
-            masajes y cuidado de la piel, sauna, sala de vapor y bañera de
-            hidromasaje.
-          </p>
-          <p>
-            El hotel está cerca del centro comercial Dubai Mall y a 15 minutos
-            en coche del aeropuerto internacional de Dubái.
-          </p>
-        </div>
-        <!-- INPUT RESERVAS -->
-      </section>
-      <div class="reserve">
-        <h2>Reservar</h2>
-        <form action="#">
-          <label for="Check-In">Check-In:</label>
-          <input type="date" id="Check-In" name="Check-In" />
-          <label for="Check-Out">Check-Out:</label>
-          <input type="date" id="Check-Out" name="Check-Out" />
-          <!-- <label for="huespedes">Huespedes:</label>
+          <div class="information">
+            <h2>Descripción</h2>
+            <p>
+              El Rose Rayhaan by Rotana está situado en la carretera Sheikh
+              Zayed, a 3 minutos del Centro Financiero Internacional de Dubái
+              (DIFC) y a un paso de la estación de metro Financial Centre.
+              También se proporciona recepción 24 horas, servicio de
+              habitaciones y WiFi gratuita en todo el establecimiento, entre
+              otras comodidades. El establecimiento alberga piscina al aire
+              libre, centro de fitness, hammam y restaurante.
+            </p>
+            <p>
+              El hotel ofrece 462 habitaciones y suites con vistas panorámicas a
+              Dubái y al Burj Khalifa. Los alojamientos disponen de hervidor de
+              agua. Todas las habitaciones del Rose Rayhaan Rotana Dubai están
+              equipadas con baño privado con bañera.
+            </p>
+            <p>
+              El Rose Rayhaan by Rotana alberga 3 sitios para comer, entre ellos
+              el restaurante Petals. Tiene capacidad para 160 personas y ofrece
+              comida durante todo el día para el desayuno, el almuerzo y la
+              cena.
+            </p>
+            <p>
+              La zona de conferencias, ubicada en 2 plantas, cuenta con 7 salas
+              de reuniones, todas equipadas con las últimas instalaciones
+              audiovisuales, conexiones sin cable y opciones. La zona de ocio
+              del hotel, el Bodylines Fitness and Wellness Club, ofrece un
+              gimnasio totalmente equipado, piscina exterior climatizada para
+              adultos y niños en la azotea, salón de belleza, salas de
+              tratamiento para masajes y cuidado de la piel, sauna, sala de
+              vapor y bañera de hidromasaje.
+            </p>
+            <p>
+              El hotel está cerca del centro comercial Dubai Mall y a 15 minutos
+              en coche del aeropuerto internacional de Dubái.
+            </p>
+          </div>
+          <!-- INPUT RESERVAS -->
+        </section>
+        <div class="reserve">
+          <h2>Reservar</h2>
+          <form action="#">
+            <label for="Check-In">Check-In:</label>
+            <input type="date" id="Check-In" name="Check-In" />
+            <label for="Check-Out">Check-Out:</label>
+            <input type="date" id="Check-Out" name="Check-Out" />
+            <!-- <label for="huespedes">Huespedes:</label>
           <select id="huespedes" name="huespedes">
             <option value="1">1</option>
             <option value="2">2</option>
           </select> -->
-          <!-- Huespedes -->
-          <label for="huespedes">Huespedes:</label>
-          <input type="number" id="huespedes" value="1" />
-          <!-- Habitaciones -->
-          <label for="habitaciones">Habitaciones:</label>
-          <input type="number" id="habitaciones" value="1" />
+            <!-- Huespedes -->
+            <label for="huespedes">Huespedes:</label>
+            <input type="number" id="huespedes" value="1" />
+            <!-- Habitaciones -->
+            <label for="habitaciones">Habitaciones:</label>
+            <input type="number" id="habitaciones" value="1" />
 
-          <!-- Boton Reservar -->
-          <input type="submit" name="botonReservar" value="Reservar" />
-        </form>
+            <!-- Boton Reservar -->
+            <input type="submit" name="botonReservar" value="Reservar" />
+          </form>
+        </div>
       </div>
+      <div>
+        <ul class="nav-footer">
+          <li>fotos</li>
+          <li>reviews</li>
+          <li>ubicacion</li>
+          <li>caracteristicas</li>
+          <li>contáctanos</li>
+          <li><a href="https://rotana.com">by Rotana</a></li>
+        </ul>
+
+        <p>precio</p>
+      </div>
+      <footer>
+        <div class="social-media">
+          <span>
+            <a href="#"><i class="icon fab fa-facebook-square"></i></a>
+          </span>
+          <span>
+            <a href="#"><i class="icon fab fa-youtube"></i></a>
+          </span>
+          <span>
+            <a href="#"><i class="icon fab fa-twitter"></i></a>
+          </span>
+          <span>
+            <a href="#"><i class="icon fab fa-pinterest"></i></a>
+          </span>
+          <span>
+            <a href="#"><i class="icon fab fa-instagram"></i></a>
+          </span>
+        </div>
+
+        <button>compartir</button>
+        <div class="logo-footer">
+          <a href="index.html">
+            <img
+              src="img/svg/logo-ryhaan_dubai.svg"
+              alt="Logo Rose Ryhaan Dubai"
+              height="35"
+            />
+          </a>
+          <a href="https://rotana.com">
+            <img src="img/svg/logo-rotana.svg" alt="logo Rotana" height="35" />
+          </a>
+        </div>
+
+        <div><h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5></div>
+      </footer>
     </div>
-    <div>
-      <ul class="nav-footer">
-        <li>fotos</li>
-        <li>reviews</li>
-        <li>ubicacion</li>
-        <li>caracteristicas</li>
-        <li>contáctanos</li>
-        <li><a href="https://rotana.com">by Rotana</a></li>
-      </ul>
-
-      <p>precio</p>
-    </div>
-    <footer>
-      <div class="social-media">
-        <span>
-          <a href="#"><i class="icon fab fa-facebook-square"></i></a>
-        </span>
-        <span>
-          <a href="#"><i class="icon fab fa-youtube"></i></a>
-        </span>
-        <span>
-          <a href="#"><i class="icon fab fa-twitter"></i></a>
-        </span>
-        <span>
-          <a href="#"><i class="icon fab fa-pinterest"></i></a>
-        </span>
-        <span>
-          <a href="#"><i class="icon fab fa-instagram"></i></a>
-        </span>
-      </div>
-
-      <button>compartir</button>
-      <div class="logo-footer">
-        <a href="index.html">
-          <img
-            src="img/svg/logo-ryhaan_dubai.svg"
-            alt="Logo Rose Ryhaan Dubai"
-            height="35"
-          />
-        </a>
-        <a href="https://rotana.com">
-          <img src="img/svg/logo-rotana.svg" alt="logo Rotana" height="35" />
-        </a>
-      </div>
-
-      <div><h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5></div>
-    </footer>
 
     <script src="js/slideshow.js"></script>
+    <script src="js/sidebar.js"></script>
   </body>
 </html>
