--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style-login.css" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- <link
       rel="stylesheet"
@@ -146,186 +147,71 @@
 
       <!-- SECCION PRINCIPAL -->
       <div class="base-main">
-        <!-- AREA PRINCIPAL -->
-        <section class="imgs">
-          <!-- SLIDESHOW -->
-          <!-- <div class="slideshow-container">
-          Full-width images with number and caption text 
-          <div class="slideGaleria fade">
-            <div class="numbertext">1 / 7</div>
-            <img
-              src="../img/img-habitacion/230031199.jpg"
-              alt="imagen torre del hotel"
-              style="width: 100%"
-            />
-            <div class="text">Hotel Rose Ryhaan by Rotana</div>
-          </div>
+        <!-- GALERIA DE IMAGENES -->
 
-          <div class="slideGaleria fade">
-            <div class="numbertext">2 / 7</div>
-            <img
-              src="../img/img-habitacion/233120309.jpg"
-              alt="imagen mujer en Spa"
-              style="width: 100%"
-            />
-            <div class="text">Spa Hotel</div>
+        <!-- TODO TEST Este es un test que me funcionó del object fit en el CSS que posiblemente puede funcionar con los sliders -->
+        <img
+          id="img-test"
+          src="img/img-habitacion/230203324.jpg"
+          alt="Galeria CSS 6"
+        />
+        <!-- TODO END TEST -->
+        <div class="galeria">
+          <div class="img-principal">
+            <img src="img/img-habitacion/230031199.jpg" alt="Galeria CSS 1" />
           </div>
-
-          <div class="slideGaleria fade">
-            <div class="numbertext">3 / 7</div>
-            <img
-              src="../img/img-habitacion/230220017.jpg"
-              alt="imagen cocina & comedor habitación"
-              style="width: 100%"
-            />
-            <div class="text">Cocina & Comedor Habitaciónes</div>
+          <div class="img-mini">
+            <img src="img/img-habitacion/230031947.jpg" alt="Galeria CSS 2" />
+            <img src="img/img-habitacion/233120309.jpg" alt="Galeria CSS 3" />
+            <img src="img/img-habitacion/230032549.jpg" alt="Galeria CSS 4" />
+            <!-- <img src="img/img-habitacion/230049217.jpg" alt="Galeria CSS 5" />
+              <img src="img/img-habitacion/230203324.jpg" alt="Galeria CSS 6" />
+              <img src="img/img-habitacion/230203934.jpg" alt="Galeria CSS 7" /> -->
           </div>
-
-          <div class="slideGaleria fade">
-            <div class="numbertext">4 / 7</div>
-            <img
-              src="../img/img-habitacion/230049217.jpg"
-              alt="imagen cocina habitación"
-              style="width: 100%"
-            />
-            <div class="text">Cocina Habitaciónes</div>
-          </div>
-
-          <div class="slideGaleria fade">
-            <div class="numbertext">5 / 7</div>
-            <img
-              src="../img/img-habitacion/230031947.jpg"
-              alt="imagen piscina"
-              style="width: 100%"
-            />
-            <div class="text">Piscina</div>
-          </div>
-
-          <div class="slideGaleria fade">
-            <div class="numbertext">6 / 7</div>
-            <img
-              src="../img/img-habitacion/230203324.jpg"
-              alt="imagen restaurante hotel"
-              style="width: 100%"
-            />
-            <div class="text">Restaurante Ryhaan</div>
-          </div>
-
-          <div class="slideGaleria fade">
-            <div class="numbertext">7 / 7</div>
-            <img
-              src="../img/img-habitacion/230203934.jpg"
-              alt="imagen dormitorio habitación"
-              style="width: 100%"
-            />
-            <div class="text">Dormitorio</div>
-          </div>
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
-        <br />
-        <div style="text-align: center">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-        </div>-->
 
-          <div class="galeria">
-            <input type="radio" name="navegacion" id="_1" checked />
-            <input type="radio" name="navegacion" id="_2" />
-            <input type="radio" name="navegacion" id="_3" />
-            <input type="radio" name="navegacion" id="_4" />
-            <input type="radio" name="navegacion" id="_5" />
-            <input type="radio" name="navegacion" id="_6" />
-            <input type="radio" name="navegacion" id="_7" />
+        <!-- Next and previous buttons -->
 
-            <img
-              src="img/img-habitacion/230031199.jpg"
-              width="500"
-              height="300"
-              alt="Galeria CSS 1"
-            />
-            <img
-              src="img/img-habitacion/230031947.jpg"
-              width="500"
-              height="300"
-              alt="Galeria CSS 2"
-            />
-            <img
-              src="img/img-habitacion/233120309.jpg"
-              width="500"
-              height="300"
-              alt="Galeria CSS 3"
-            />
-            <img
-              src="img/img-habitacion/230032549.jpg"
-              width="500"
-              height="300"
-              alt="Galeria CSS 4"
-            />
-            <img
-              src="img/img-habitacion/230049217.jpg"
-              width="500"
-              height="300"
-              alt="Galeria CSS 5"
-            />
-            <img
-              src="img/img-habitacion/230203324.jpg"
-              width="500"
-              height="300"
-              alt="Galeria CSS 6"
-            />
-            <img
-              src="img/img-habitacion/230203934.jpg"
-              width="260"
-              height="300"
-              alt="Galeria CSS 7"
-            />
-          </div>
+        <div class="information">
+          <h2>Descripción</h2>
+          <p>
+            El Rose Rayhaan by Rotana está situado en la carretera Sheikh Zayed,
+            a 3 minutos del Centro Financiero Internacional de Dubái (DIFC) y a
+            un paso de la estación de metro Financial Centre. También se
+            proporciona recepción 24 horas, servicio de habitaciones y WiFi
+            gratuita en todo el establecimiento, entre otras comodidades. El
+            establecimiento alberga piscina al aire libre, centro de fitness,
+            hammam y restaurante.
+          </p>
+          <p>
+            El hotel ofrece 462 habitaciones y suites con vistas panorámicas a
+            Dubái y al Burj Khalifa. Los alojamientos disponen de hervidor de
+            agua. Todas las habitaciones del Rose Rayhaan Rotana Dubai están
+            equipadas con baño privado con bañera.
+          </p>
+          <p>
+            El Rose Rayhaan by Rotana alberga 3 sitios para comer, entre ellos
+            el restaurante Petals. Tiene capacidad para 160 personas y ofrece
+            comida durante todo el día para el desayuno, el almuerzo y la cena.
+          </p>
+          <p>
+            La zona de conferencias, ubicada en 2 plantas, cuenta con 7 salas de
+            reuniones, todas equipadas con las últimas instalaciones
+            audiovisuales, conexiones sin cable y opciones. La zona de ocio del
+            hotel, el Bodylines Fitness and Wellness Club, ofrece un gimnasio
+            totalmente equipado, piscina exterior climatizada para adultos y
+            niños en la azotea, salón de belleza, salas de tratamiento para
+            masajes y cuidado de la piel, sauna, sala de vapor y bañera de
+            hidromasaje.
+          </p>
+          <p>
+            El hotel está cerca del centro comercial Dubai Mall y a 15 minutos
+            en coche del aeropuerto internacional de Dubái.
+          </p>
+        </div>
 
-          <!-- Next and previous buttons -->
-
-          <div class="information">
-            <h2>Descripción</h2>
-            <p>
-              El Rose Rayhaan by Rotana está situado en la carretera Sheikh
-              Zayed, a 3 minutos del Centro Financiero Internacional de Dubái
-              (DIFC) y a un paso de la estación de metro Financial Centre.
-              También se proporciona recepción 24 horas, servicio de
-              habitaciones y WiFi gratuita en todo el establecimiento, entre
-              otras comodidades. El establecimiento alberga piscina al aire
-              libre, centro de fitness, hammam y restaurante.
-            </p>
-            <p>
-              El hotel ofrece 462 habitaciones y suites con vistas panorámicas a
-              Dubái y al Burj Khalifa. Los alojamientos disponen de hervidor de
-              agua. Todas las habitaciones del Rose Rayhaan Rotana Dubai están
-              equipadas con baño privado con bañera.
-            </p>
-            <p>
-              El Rose Rayhaan by Rotana alberga 3 sitios para comer, entre ellos
-              el restaurante Petals. Tiene capacidad para 160 personas y ofrece
-              comida durante todo el día para el desayuno, el almuerzo y la
-              cena.
-            </p>
-            <p>
-              La zona de conferencias, ubicada en 2 plantas, cuenta con 7 salas
-              de reuniones, todas equipadas con las últimas instalaciones
-              audiovisuales, conexiones sin cable y opciones. La zona de ocio
-              del hotel, el Bodylines Fitness and Wellness Club, ofrece un
-              gimnasio totalmente equipado, piscina exterior climatizada para
-              adultos y niños en la azotea, salón de belleza, salas de
-              tratamiento para masajes y cuidado de la piel, sauna, sala de
-              vapor y bañera de hidromasaje.
-            </p>
-            <p>
-              El hotel está cerca del centro comercial Dubai Mall y a 15 minutos
-              en coche del aeropuerto internacional de Dubái.
-            </p>
-          </div>
-          <!-- INPUT RESERVAS -->
-        </section>
-        <div class="reserve">
+        <!-- INPUT RESERVAS -->
+        <div class="booking">
           <h2>Reservar</h2>
           <form action="#">
             <label for="Check-In">Check-In:</label>
@@ -398,7 +284,7 @@
       </footer>
     </div>
 
-    <script src="js/slideshow.js"></script>
+    <!-- <script src="js/slideshow.js"></script> -->
     <script src="js/sidebar.js"></script>
   </body>
 </html>
