commit adelanto Login ModalBox to 'sidebar-menu'

--- a/index.html
+++ b/index.html
@@ -134,26 +134,29 @@
             </div>
 
             <div class="modal-container-button">
-              <button type="submit" class="modal-confirmbtn">
-                Confirmar
-                <img
-                  src="img/svg/fa/check-solid.svg"
-                  alt="icono logout"
-                  height="30"
-                />
-              </button>
-
-              <button
-                type="button"
-                onclick="document.getElementById('modal-id01').style.display='none'"
-                class="modal-cancelbtn"
-              >
-                Cancelar<img
-                  src="img/svg/fa/xmark-solid.svg"
-                  alt="icono logout"
-                  height="30"
-                />
-              </button>
+              <div>
+                <button type="submit" class="modal-confirmbtn">
+                  Confirmar
+                  <img
+                    src="img/svg/fa/check-solid.svg"
+                    alt="icono logout"
+                    height="30"
+                  />
+                </button>
+              </div>
+              <div>
+                <button
+                  type="button"
+                  onclick="document.getElementById('modal-id01').style.display='none'"
+                  class="modal-cancelbtn"
+                >
+                  Cancelar<img
+                    src="img/svg/fa/xmark-solid.svg"
+                    alt="icono logout"
+                    height="30"
+                  />
+                </button>
+              </div>
             </div>
             <span class="modal-psw"
               ><a href="#">¿Ha olvidado su Contraseña?</a></span
