--- a/index-frank.html
+++ b/index-frank.html
@@ -23,37 +23,57 @@
   </head>
 
   <body>
-    <nav>
+    <nav class="container">
       <!-- SIDEBAR -->
       <div id="mySidebar" class="sidebar">
-        <div id="top-sidebar">
-          <div class="logo-img">
-            <a href="index.html">
-              <img src="img/svg/logo-ryhaan.svg" alt="Logo-Ryhaan" width="75" />
-            </a>
-          </div>
-          <div>
+        <ul>
+          <li>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
               >×</a
             >
+          </li>
+          <li>
+            <a href="#">
+              <span class="icon">
+                <img src="img/svg/logo-ryhaan.svg" alt="Logo-Ryhaan" />
+              </span>
+            </a>
+          </li>
+          <li></li>
+        </ul>
+
+        <div id="top-sidebar">
+          <div class="logo-img">
+            <a href="index.html">
+              <img src="img/svg/logo-ryhaan.svg" alt="Logo-Ryhaan" />
+            </a>
           </div>
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+            >×</a
+          >
+        </div>
+        <div>
           <a href="index.html"
             ><img
               src="img/svg/fa/bell-concierge-solid.svg"
               alt="concierge bell icon"
-              width="50"
+              class="sidebar-icons"
             />
             Inicio</a
           >
           <a href="habitaciones.html"
-            ><img src="img/svg/fa/bed-solid.svg" alt="bed icon" width="50" />
+            ><img
+              src="img/svg/fa/bed-solid.svg"
+              alt="bed icon"
+              class="sidebar-icons"
+            />
             Habitaciones</a
           >
           <a href="reservas.html"
             ><img
               src="img/svg/fa/book-solid.svg"
               alt="booking icon"
-              width="50"
+              class="sidebar-icons"
             />
             Reservas</a
           >
@@ -61,7 +81,7 @@
             ><img
               src="img/svg/fa/phone-solid.svg"
               alt="phone icon"
-              width="50"
+              class="sidebar-icons"
             />
             Contacto</a
           >
@@ -69,7 +89,7 @@
             ><img
               src="img/svg/fa/id-badge-solid.svg"
               alt="id-card icon"
-              width="50"
+              class="sidebar-icons"
             />
             Sobre Nosotros</a
           >
@@ -77,7 +97,7 @@
             <img
               src="img/img-users/user.svg"
               alt="Foto Usuario"
-              width="75"
+              class="sidebar-icons"
               onclick="document.getElementById('modal-id01').style.display='block'"
             />
           </a>
