--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
             </select> -->
                 <!-- Huespedes -->
                 <label for="huespedes">Huespedes:</label>
-                <input type="number" id="huespedes" value="1" />
+                <input class="little-input" type="number" id="huespedes" value="1" />
                 <!-- Habitaciones -->
                 <label for="habitaciones">Habitaciones:</label>
-                <input type="number" id="habitaciones" value="1" />
+                <input class="little-input" type="number" id="habitaciones" value="1" />
                 <span>$$$$</span>
                 <!-- Boton Reservar -->
                 <input class="btn-booking" type="submit" name="botonReservar" value="Reservar" />
